--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    repositories {
-        jcenter()
-    }
+
+    apply from: 'versions.gradle'
+    addRepos(repositories)
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.android.tools.build:gradle:3.5.0'
+
+        classpath 'com.novoda:bintray-release:0.9.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
-    repositories {
-        jcenter()
-    }
+    addRepos(repositories)
 }
 
 task clean(type: Delete) {
@@ -29,5 +29,8 @@ allprojects {
             charSet 'UTF-8'
             links "http://docs.oracle.com/javase/8/docs/api"
         }
+
+        options.addStringOption('Xdoclint:none', '-quiet')
+        failOnError false
     }
 }
